# AIPass

./: .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  issue-triage.yml  publish.yml  security.yml  stale.yml
docs/: HONESTY_AUDIT.md
examples/chatgpt/: README.md  generate_context.py
examples/claude_code/: README.md  hook_inject.py
examples/generic_llm/: README.md  api_prepend.py
schemas/: id.schema.json  local.schema.json  observations.schema.json
tests/: test_agent.py  test_cli.py  test_examples.py
trinity_pattern/: __init__.py  agent.py  cli.py  schemas.py
trinity_pattern/templates/: AGENTS.md  CLAUDE.md
