[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trinity-pattern"
version = "1.0.0"
description = "Persistent identity for AI agents — three files, one library, memory that outlives the session."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    { name = "AIPass", email = "aipass.system@gmail.com" },
]
keywords = ["ai", "agents", "identity", "memory", "persistence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
trinity = "trinity_pattern.cli:main"

[project.urls]
Homepage = "https://github.com/AIOSAI/AIPass"
Repository = "https://github.com/AIOSAI/AIPass"

[tool.setuptools.packages.find]
include = ["trinity_pattern*"]

[tool.setuptools.package-data]
trinity_pattern = ["templates/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (examples, file I/O)",
    "slow: Long-running tests (Docker, full matrix)",
]

[tool.coverage.run]
source = ["trinity_pattern"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py38"
line-length = 100
